--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@
 *.kicad_prl
 *.sch-bak
 *~
+*.lck
+
 _autosave-*
 *.tmp
 *-save.pro
@@ -24,9 +26,11 @@ fp-info-cache
 *.dsn
 *.ses
 
-# Exported BOM files
+# Exported files
 *.xml
 *.csv
+PCBA
 
+#
 # Linux specific file to store KDE color folder
 .directory
